src/main/java/example/mcroservice/users/errors/my_exceptions/Phone_number_exception.java
package example.mcroservice.users.errors.my_exceptions;

public class Phone_number_exception extends My_exceptions {

  //CONSTRUCTOR----------------------------------------------------------------
  public Phone_number_exception(String msg) {
    super(msg, "PhoneNumberException");
  }

}
